fix amplify cli fails
Signed-off-by: Ty Karny <7071680+Tayman1@users.noreply.github.com>

--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -2,6 +2,7 @@
 
   "files.exclude": {
     "amplify/.config": true,
+    "amplify/.config/local-*": true,
     "amplify/**/*-parameters.json": true,
     "amplify/**/amplify.state": true,
     "amplify/**/transform.conf.json": true,
